# Qt6_Demo

./: .gitignore  CMakeLists.txt  README.md
apps/main/: CMakeLists.txt
apps/main/qml/: main.qml
components/ColourPicker/: CMakeLists.txt
components/ColourPicker/ColourConverter/: CMakeLists.txt  ColourConverter.hpp
components/ColourPicker/ColourConverter/private/: ColourConverter.cpp
components/ColourPicker/libs/colour_models/: CMakeLists.txt
components/ColourPicker/libs/colour_models/private/: colour_models.cpp
components/ColourPicker/libs/colour_models/public/: colour_models.hpp
components/ColourPicker/precompilables/colour_maps/: CMakeLists.txt
components/ColourPicker/precompilables/colour_maps/main/: main.cpp
components/ColourPicker/precompilables/colour_maps/private/: colour_maps.cpp  qt_utilities.cpp
components/ColourPicker/precompilables/colour_maps/public/: algorithms.hpp  colour_maps.hpp  qt_utilities.hpp
components/ColourPicker/qml/: ColourPicker.qml
components/FontStyler/: CMakeLists.txt
components/FontStyler/qml/: FontStyler.qml
components/TextEditor/: CMakeLists.txt
components/TextEditor/qml/: TextEditor.qml
